1.15.1 - 2020-06-10
	- (Linux) Fix build on older Linux systems (Christian Göttsche)
	- (MacOS) Revert "Exclude firmlinks by default" behavior (until we have a better solution)
	- (MacOS) Add --exclude-firmlinks option to opt-in to the above behavior

1.15 - 2020-05-30
	- (Linux) Add --exclude-kernfs option to exclude pseudo filesystems (Christian Göttsche)
	- (MacOS) Exclude firmlinks by default (Saagar Jha)
	- (MacOS) Add --follow-firmlinks option to follow firmlinks (Saagar Jha)
	- Fix bug in calculating the apparent size of directories containing hardlinks
	- Fix integer overflow with directories containing >2GiB worth of file names
	- Fix yet another possible 100% CPU bug when losing terminal

1.14.2 - 2020-02-10
	- Fix compilation with GCC 10 (-fno-common)
	- Fix minor display issue when scanning 10M+ files
	- Slightly reduce memory usage for hard link detection

1.14.1 - 2019-08-05
	- Fix occasional early exit on OS X
	- Fix --exclude-caches
	- Improve handling of out-of-memory situations

1.14 - 2019-02-04
	- Add mtime display and sorting (Alex Wilson)
	- Add (limited) --follow-symlinks option (Simon Doppler)
	- Display larger file counts in browser UI
	- Add -V, --version, and --help alias flags
	- Fix crash when attempting to sort an empty directory
	- Fix 100% CPU bug when ncdu loses the terminal
	- Fix '--color=off' flag
	- Fix some typos

1.13 - 2018-01-29
	- Add "extended information" mode and -e flag
	- Add file mode, modification time and uid/gid to info window with -e
	- Add experimental color support and --color flag
	- Add -rr option to disable shell spawning
	- Remove directory nesting limit on file import
	- Fix handling of interrupts during file import
	- Fix undefined behavior that triggered crash on OS X

1.12 - 2016-08-24
	- Add NCDU_SHELL environment variable
	- Add --confirm-quit flag
	- Fix compilation due to missing sys/wait.h include

1.11 - 2015-04-05
	- Added 'b' key to spawn shell in the current directory