@@ -1,3 +1,6 @@
+// SPDX-FileCopyrightText: 2021 Yoran Heling <projects@yorhel.nl>
+// SPDX-License-Identifier: MIT
+
 pub const program_version = "2.0-dev";
 
 const std = @import("std");
